página home inicial estilizada

--- a/base_templates/global/base.html
+++ b/base_templates/global/base.html
@@ -7,6 +7,11 @@
     <link rel="stylesheet" href="{% static 'global\css\style.css'%}">
 </head>
 <body>
-    <h1>Base global</h1>
+    <div class="card">
+        <div class="card-content">
+            <p class="card-title">You're learning Django!</p>
+            <p class="card-para">Keep studying and improving your knowledge.</p>
+        </div>
+    </div>
 </body>
 </html>
